comments in MyMinHeap.java